crates/oxc_css/tests/error/less/mixin/call-commas.snap
---
source: crates/oxc_css/tests/error.rs
---
error: component value is expected
  ┌─ call-commas.less:1:13
  │
1 │ .mixin(@arg,,);
  │             ^


